--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,20 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "StoreSagePro",
-  "version": "1.0",
-  "description": "My first Chrome extension.",
-  "browser_action": {
+  "version": "1.3",
+  "description": "Best Amazon Listing Calculator for Sellers",
+  "icons": {
+    "16": "icon.png",
+    "48": "icon.png",
+    "128": "icon.png"
+  },
+  "action": {
     "default_popup": "popup.html",
-    "default_icon": "icon.png"
+    "default_icon": {
+      "16": "icon.png",
+      "48": "icon.png",
+      "128": "icon.png"
+    }
   },
   "permissions": ["activeTab"]
 }
